--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ edition = "2024"
 
 [dependencies]
 axum = "0.7"
-serde = "1.0.228"
+futures-util = "0.3.31"
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+thiserror = "1.0.69"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
+dotenvy = "0.15"
